allow updating items
